[EBE-57]:added authorize api
